# cuda-pt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: cornell.gltf
src/: CMakeLists.txt  gamma.cpp  main.cpp
src/application/: application.cu  application.h
src/base/: bvh_dummy.cu  bvh_dummy.h  bxdf.h  camera.cu  camera.h  image.cpp  image.cu  image.h  intersection.h  mesh.cu  mesh.h  mesh_object.cu  mesh_object.h  object.cu  object.h  primitive.h  ray.h  sampler.h  scene.cu  scene.h  scene_object.cu  scene_object.h  shape.h
src/geometry/: matrix.h  quaternion.h  ray.h  sphere.h  transform.h  triangle.h  vector.h
src/integrator/: integrator.cpp  integrator.cu  integrator.h
src/math/: vector.h
src/reflections/: lambertian.h
src/samplers/: pcg_sampler.cu  pcg_sampler.h
